salesforce/force-app/main/default/objects/Formula_Settings__c/Formula_Settings__c.object-meta.xml
<CustomObject>
    <description>Global formula settings including freight rates</description>
    <label>Formula Settings</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formula Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>