salesforce/force-app/main/default/objects/Formula_Settings__c/fields/Freight_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Freight_Percentage__c</fullName><label>Freight Percentage</label><precision>10</precision><required>false</required><scale>4</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>