salesforce/force-app/main/default/objects/Formula_Settings__c/fields/Mid_Price_Days__c.field-meta.xml
<CustomField>
    <fullName>Mid_Price_Days__c</fullName><label>Mid Price (Days)</label><precision>5</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>